fix: added missing cargo crate descriptions for publishing

--- a/bmatcher-core/Cargo.toml
+++ b/bmatcher-core/Cargo.toml
@@ -3,6 +3,7 @@ name = "bmatcher-core"
 authors.workspace = true
 version.workspace = true
 edition.workspace = true
-
+description.workspace = true
+license-file.workspace = true
 
 [dependencies]
