--- a/bmatcher-core/Cargo.toml
+++ b/bmatcher-core/Cargo.toml
@@ -7,3 +7,11 @@ description.workspace = true
 license-file.workspace = true
 
 [dependencies]
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+rand = "0.8.5"
+
+[[bench]]
+name = "matcher"
+harness = false
