feat: improved binary matching speed up to 30 % by reducing virtual function calls to binary pattern by caching the atoms and byte sequences

--- a/bmatcher-core/Cargo.toml
+++ b/bmatcher-core/Cargo.toml
@@ -6,6 +6,9 @@ edition.workspace = true
 description.workspace = true
 license-file.workspace = true
 
+[lib]
+bench = false
+
 [dependencies]
 
 [dev-dependencies]
