misc: exactly specifying workspace dependency versions

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -6,4 +6,4 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-bmatcher = { version = "*", path = "../bmatcher" }
+bmatcher = { version = "=0.2.4", path = "../bmatcher" }
