--- a/bmatcher-core/Cargo.toml
+++ b/bmatcher-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bmatcher-core"
+version = "0.2.4"
 authors.workspace = true
-version.workspace = true
 edition.workspace = true
 description.workspace = true
 license-file.workspace = true
