--- a/bmatcher-proc/Cargo.toml
+++ b/bmatcher-proc/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bmatcher-proc"
+version = "0.2.4"
 authors.workspace = true
-version.workspace = true
 description.workspace = true
 license-file.workspace = true
 edition.workspace = true
@@ -10,7 +10,7 @@ edition.workspace = true
 proc-macro = true
 
 [dependencies]
-bmatcher-core = { version = "0.2", path = "../bmatcher-core" }
+bmatcher-core = { version = "=0.2.4", path = "../bmatcher-core" }
 quote = "1"
 proc-macro2 = "1.0"
 syn = { version = "2.0", features = ["full"] }
