--- a/bmatcher/Cargo.toml
+++ b/bmatcher/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bmatcher"
+version = "0.2.4"
 authors.workspace = true
-version.workspace = true
 edition.workspace = true
 description.workspace = true
 license-file.workspace = true
@@ -9,5 +9,5 @@ repository.workspace = true
 readme = "../README.MD"
 
 [dependencies]
-bmatcher-core = { version = "0.2", path = "../bmatcher-core" }
-bmatcher-proc = { version = "0.2", path = "../bmatcher-proc" }
+bmatcher-core = { version = "=0.2.4", path = "../bmatcher-core" }
+bmatcher-proc = { version = "=0.2.4", path = "../bmatcher-proc" }
