--- a/bmatcher-core/Cargo.toml
+++ b/bmatcher-core/Cargo.toml
@@ -10,6 +10,7 @@ license-file.workspace = true
 bench = false
 
 [dependencies]
+thiserror-no-std = "2.0.2"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
